--- a/index.html
+++ b/index.html
@@ -60,6 +60,39 @@
             </div>
          </div>
       </section>
+   <!------- What I Do Section ------->
+      <section class="What-I-do">
+         <h3 class="section-title">What I do</h3>
+         <p class="section-description" style="max-width: 70%; text-align: center; margin: 0 auto;">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+         <!-- .skill-container>.skill*4>img+p.skill-title+p.skill-description -->
+         <div class="skill-container">
+            <div class="skill">
+               <img src="./Assets/images/icons/js.png">
+               <p class="skill-title">Vanilla JavaScript</p>
+               <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+               <img src="./Assets/images/icons/react.png">
+               <p class="skill-title">React</p>
+               <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+               <img src="./Assets/images/icons/nodejs.png">
+               <p class="skill-title">Node.js</p>
+               <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+               <img src="./Assets/images/icons/mongo.png">
+               <p class="skill-title">MongoDB</p>
+               <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+         </div>
+      </section>
+   <!----- Resume Section ------>
+   <section class="resume">
+      <h3 class="section-title">A summary of My Resume</h3>
+      
+   </section>
    </main>
 
    <footer>
