fixed live problem

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Developer Portfolio</title>
-   <link rel="stylesheet" href="/Assets/CSS/portfolio.css">
+   <link rel="stylesheet" href="./Assets/CSS/portfolio.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@800&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
@@ -145,35 +145,37 @@
    </section>
 
 <!-------- Contact Section ------>
-   <section>
-      <div class="contact">
-         <div>
-            <h3 class="section-title">Let's Connect</h3>
-            <p class="section-description">
-               Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
-            </p>
-            <a href="">
-               <img src="./Assets/images/icons/facebook.png">
-            </a>
-            <a href="">
-               <img src="./Assets/images/icons/twitter.png">
-            </a>
-            <a href="">
-               <img src="./Assets/images/icons/insta.png">
-            </a>
-         </div>
-         <div>
-            <h3 class="section-title">Let’s Message me</h3>
-            <form action="">
-               <input type="text" name="" id="" placeholder="Your name">
-               <input type="email" name="" id="" placeholder="Your email">
-               <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
-               <input class="btn-primary" type="button" value="Submit">
-            </form>
-         </div>
-      </div>
-   </section>
+   
    </main>
-
+   <footer>
+      <section style="width: 100%; background-color: #FFF8F3;">
+         <div class="contact">
+            <div>
+               <h3 class="section-title">Let's Connect</h3>
+               <p class="section-description">
+                  Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+               </p>
+               <a href="">
+                  <img src="./Assets/images/icons/facebook.png">
+               </a>
+               <a href="">
+                  <img src="./Assets/images/icons/twitter.png">
+               </a>
+               <a href="">
+                  <img src="./Assets/images/icons/insta.png">
+               </a>
+            </div>
+            <div >
+               <h3 class="section-title">Let’s Message me</h3>
+               <form action="">
+                  <input type="text" name="" id="" placeholder="Your name">
+                  <input type="email" name="" id="" placeholder="Your email">
+                  <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                  <input class="btn-primary" type="button" value="Submit">
+               </form>
+            </div>
+         </div>
+      </section>
+   </footer>
 </body>
 </html>
